--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
           <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
                 aria-expanded="false">Pacotes</a>
@@ -130,8 +131,8 @@
             <div class="col-md-5">
               <label for="country" class="form-label">Cidade</label>
               <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option>United States</option>
+                <option value="">Selecione...</option>
+                <option>Brasília</option>
               </select>
               <div class="invalid-feedback">
                 Please select a valid country.
@@ -141,8 +142,8 @@
             <div class="col-md-4">
               <label for="state" class="form-label">Estado</label>
               <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>California</option>
+                <option value="">Selecione...</option>
+                <option>Distrito Federal</option>
               </select>
               <div class="invalid-feedback">
                 Please provide a valid state.
@@ -181,7 +182,7 @@
             <div class="col-md-6">
               <label for="cc-name" class="form-label">Nome no cartão</label>
               <input type="text" class="form-control" id="cc-name" placeholder="" required>
-              <small class="text-muted">Full name as displayed on card</small>
+              <small class="text-muted">Nome escrito no cartão</small>
               <div class="invalid-feedback">
                 Name on card is required
               </div>
