--- a/checkout.html
+++ b/checkout.html
@@ -26,13 +26,16 @@
               <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
                 aria-expanded="false">Pacotes</a>
               <ul class="dropdown-menu bg-warning" aria-labelledby="dropdown03">
-                <li><a class="dropdown-item" href="#">Nacionais</a></li>
-                <li><a class="dropdown-item" href="#">Internacionais</a></li>
+                <li><a class="dropdown-item" href="index.html">Nacionais</a></li>
+                <li><a class="dropdown-item" href="index.html">Internacionais</a></li>
               </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Taxas</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-cart3"></i></a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Taxas</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Contato</a></li>
+            <li class="nav-item"><a
+                href="https://1a6d28f4-d6f0-4cab-9f27-84892183351d-00-2zrmbqv3pfn6o.janeway.replit.dev/checkout.html"
+                class="nav-link">
+                <i class="bi bi-cart4"></i></a></li>
           </ul>
         </div>
       </div>
